@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-10-25T08:37:00Z",
+  "timestamp" : "2022-10-25T16:40:24Z",
   "count_outdated" : 2508,
   "uniques_outdated" : 647,
-  "count" : 2578,
-  "uniques" : 689,
+  "count" : 2571,
+  "uniques" : 685,
   "clones" : [
     {
       "timestamp": "2022-10-11T00:00:00Z",
-      "count": 10,
+      "count": 1,
       "count_minmax": [ 1, 11 ],
-      "uniques": 7,
+      "uniques": 1,
       "uniques_minmax": [ 1, 7 ]
     },
     {
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-25T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
