@@ -1,11 +1,11 @@
 {
-  "count": 70,
-  "uniques": 25,
+  "count": 63,
+  "uniques": 22,
   "clones": [
     {
       "timestamp": "2022-10-11T00:00:00Z",
-      "count": 10,
-      "uniques": 7
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-12T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-10-24T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-25T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
