@@ -1,3 +1,11 @@
+2022-10-25T16:40:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3322719396 # 968
+* notice: last 14d: unq all: 22 63
+* notice: prev accum: outdated-unq outdated-all / unq all: 647 2508 / 689 2578
+* notice: next accum: outdated-unq outdated-all / unq all: 647 2508 / 685 2571
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -6 -9 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-10-11 2022-10-25]
+
 2022-10-25T08:37:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3319385843 # 967
 * notice: last 14d: unq all: 25 70
